# ecupool

./: README.md
api/: Cargo.toml
api/src/: main.rs
backend/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs  routes.rs  state.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: lib.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: lib.rs
web/: package.json  pnpm-lock.yaml
