[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base32 = "0.5.1"
config = { version = "0.15.8", default-features = false, features = ["toml"] }
email_address = "0.2.9"
eyre = "0.6.12"
image = { version = "0.25.5", features = ["jpeg", "png", "avif", "rayon"] }
infer = "0.19.0"
jiff = { version = "0.2.1", features = ["serde"] }
moka = { version = "0.12.10", features = ["future"] }
nutype = "0.6.1"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
snafu = "0.8.5"
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "migrate",
    "macros",
    "json",
] }
stringprep = "0.1.5"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
    "ansi",
] }
uuid = { version = "1.14.0", features = ["serde", "v7"] }
