[workspace]
members = ["crates/api", "crates/config", "crates/db"]
default-members = ["crates/api"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Adrian J. Delgado <rust@adrianjdelgado.com>",
    "Joangie M. Márquez <me@practicat.dev>",
]
publish = false

[workspace.dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base32 = "0.5.1"
dotenvy = "0.15.7"
email_address = "0.2.9"
eyre = "0.6.12"
image = { version = "0.25.5", features = ["jpeg", "png", "avif", "rayon"] }
infer = "0.19.0"
jiff = { version = "0.2.3", features = ["serde"] }
moka = { version = "0.12.10", features = ["future"] }
nutype = "0.6.1"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
snafu = "0.8.5"
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "migrate",
    "macros",
    "json",
] }
stringprep = "0.1.5"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
    "ansi",
] }
uuid = { version = "1.15.0", features = ["serde", "v7"] }
