[package]
name = "ecupool-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ecupool-config = { path = "../config" }
ecupool-db = { path = "../db" }

axum.workspace = true
eyre.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
